* 2014-05-16 - thorben.betten@open-xchange.com

 - Fix for bug 29046: Disabled unsafe auto-consistency check & ensure folder changes are reflected in database on modifying operations

* 2014-05-15 - thorben.betten@open-xchange.com

 - Fix for bug 32033: Escape auto-complete prefix delivered in JSON response
 - Fix for bug 32559: Orderly parenthesized CSS assignment & allow "radial-gradient" for "background" style tag
 - Fix for bug 29377: Perform a "right merge" from config tree to JSlob JSON data

* 2014-05-14 - martin.herfurth@open-xchange.com

 - Fix for bug 32465: Bad until value on series update.

* 2014-05-14 - thorben.betten@open-xchange.com

 - Fix for bug 32519: Fixed parsing JSON in case JSON NULL is set as value and fall-back to mail account credentials if transport ones seems to be "not set"
 - Fix for bug 32541: Expect master administrator credentials

* 2014-05-13 - thorben.betten@open-xchange.com

 - Fix for bug 32226: Do not specify any cache-controlling HTTP header for "file" HTTP-API module

* 2014-05-12 - martin.herfurth@open-xchange.com

 - Fix for bug 32385: New appointments request returns duplicate entries.

* 2014-05-12 - thorben.betten@open-xchange.com

 - Fix for bug 30843: Introduced properties for IMAP, POP3, and SMTP to specify the SSL cipher suites that will be enabled for SSL connections
 - Fix for bug 32466: Ignore transport credentials on primary mail account update
 - Fix for bug 32478: Orderly signal error exit code if MBean execution failed

* 2014-05-09 - thorben.betten@open-xchange.com

 - Fix for bug 32358: Drop any inline information on plain/text forward; such as "Content-Id" header
 - Fix for bug 32413: Added null guard
 - Fix for bug 32415/32417: Several null guard to deal with possible null return value
 - Fix for bug 32017: Keep subfolder information intact for "Public files" (15) folder

* 2014-05-08 - thorben.betten@open-xchange.com
