@@ -1,3 +1,7 @@
+* 2014-05-16 - ioannis.chouklis@open-xchange.com
+
+ - Fix for bug 32554: Add all trashed folders to a list and ignore those when searching for all files.
+
 * 2014-05-16 - thorben.betten@open-xchange.com
 
  - Fix for bug 29046: Disabled unsafe auto-consistency check & ensure folder changes are reflected in database on modifying operations
